--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Mehedi Hasan Fahim</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="color">Mehedi Hasan Fahim</span> World!</h1>
+            <h2>Photography Ideas to Improve Your Photography</h2>
+            <p>The use of reflections in your photography can add gorgeous depth and structure to your images.
+                They can turn average landscapes and cityscapes into something extraordinary. Use a wide-angle lens to
+                capture a wider field of view, for full effect.</p>
+            <a class="link-button" href="https://www.facebook.com/mehedihasan.fahim.1610">facebook</a>
+        </div>
+        <div class="half-width"> <img src="images/my-bg.png" alt=""></div>
+    </section>
 </body>
+
 </html>
